# eventshandler

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  chat.py  events.py  notifications.py  router.py  users.py
backend/app/core/: cache.py  config.py  database.py  security.py
backend/app/models/: __init__.py  event.py  event_message.py  notification.py  participant.py  user.py
backend/app/schemas/: admin.py  chat.py  event.py  notification.py  user.py
backend/app/services/: handles.py  notifications.py  reminders.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_social.py  0003_avatar.py  0004_event_location.py  0005_event_time.py  0006_event_reminder.py  0007_event_messages.py  0008_event_duration.py
frontend/: .dockerignore  Caddyfile  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Avatar.jsx  BackgroundDecor.jsx  Calendar.jsx  ChatWidget.jsx  CommandPalette.jsx  DurationPicker.jsx  ErrorBoundary.jsx  EventChatModal.jsx  Modal.jsx  StatusPicker.jsx  TimePicker.jsx  Toasts.jsx
frontend/src/lib/: api.js  format.js  icons.jsx  ui.js
frontend/src/views/: AdminView.jsx  AuthView.jsx  DashboardView.jsx  NotificationsView.jsx  ProfileView.jsx
