[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "propatcher",email = "dfyz240206@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "pydantic[email] (>=2.0.0,<3.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "httpx (>=0.27.0,<0.29.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "redis (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
